# python-pooldose

./: .gitignore  CHANGELOG.md  MAPPING_OPTIONS_CONVERSIONS.md  README.md  TYPING.md  pyproject.toml  requirements.txt
.github/workflows/: mypy.yml  pylint.yml  python-app.yml  python-publish.yml
examples/: README.md  cli_features_demo.py  demo.py  demo_mock.py  demo_utils.py  test_mock_simple.py
pooldose/: __init__.py  client.py  exceptions.py  instant_values.py  request_handler.py  static_values.py
pooldose/mappings/: model_PDPR1H1HAW100_FW539187.json
src/pooldose/: __init__.py  __main__.py  client.py  constants.py  device_analyzer.py  device_analyzer_clean.py  instant_values.py  mapping_info.py  mock_client.py  request_handler.py  type_definitions.py
src/pooldose/mappings/: mapping_info.py  model_PDHC1H1HAR1V1_FW539224.json  model_PDPH1H1HAW100_FW539176.json  model_PDPR1H04AW100_FW539292.json  model_PDPR1H1HAR1V0_FW539224.json  model_PDPR1H1HAW100_FW539187.json
src/pooldose/values/: instant_values.py  static_values.py
tests/: conftest.py  test_cli.py  test_client.py  test_device_analyzer.py  test_device_analyzer_integration.py  test_instant_values.py  test_mapping_info.py  test_mock_client_set_value.py  test_request_handler.py  test_ssl_support.py  test_static_values.py
