[project]
name = "python-pooldose"
version = "0.1.1"
description = "Async Python client for SEKO Pooldose devices"
authors = [
    { name = "Lukas Maertin", email = "lukas@mail.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp"
]

[project.urls]
Homepage = "https://github.com/lmaertin/python-pooldose"
Repository = "https://github.com/lmaertin/python-pooldose"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["pooldose"]

[tool.setuptools.package-data]
"pooldose.mappings" = ["*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"